--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "croftsoft-commander"
 version = "0.1.0"
 edition = "2021"
+default-run = "commander"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,6 +13,10 @@ path = "src/lib.rs"
 [[bin]]
 name = "commander"
 path = "src/main.rs"
+
+[[bin]]
+name = "commander-no-clap"
+path = "src/main-no-clap.rs"
 
 [dependencies]
 clap = { version = "3", features = ["derive"] }
