--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 default-run = "commander"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# See more keys and their definitions at
+#   https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 name = "commander"
