--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,4 +1,5 @@
 # https://rust-lang.github.io/rustfmt/
+array_width = 0
 # group_imports = "StdExternalCrate"
 # imports_layout = "HorizontalVertical"
 max_width = 80
