--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "croftsoft-commander"
 version = "0.1.0"
 edition = "2021"
+authors = ["David Wallace Croft <david@CroftSoft.com>"]
 
 # See more keys and their definitions at
 #   https://doc.rust-lang.org/cargo/reference/manifest.html
