--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,7 +1,15 @@
+# Formatting configuration for CroftSoft Commander
 # https://rust-lang.github.io/rustfmt/
+#
+# Copyright 2023 CroftSoft Inc
+# https://www.CroftSoft.com/
+# Author: David Wallace Croft
+# https://www.CroftSoft.com/people/david/
+# Updated: 2023-07-27
+
 array_width = 1
-chain_width = 80
-fn_args_layout = "Vertical"
+# condense_wildcard_suffixes = true
+fn_params_layout = "Vertical"
 # group_imports = "StdExternalCrate"
 hard_tabs = false
 # imports_layout = "HorizontalVertical"
@@ -10,13 +18,14 @@ match_block_trailing_comma = true
 max_width = 80
 merge_derives = true
 newline_style = "Unix"
+# normalize_comments = true
 remove_nested_parens = true
-reorder_imports = true
-reorder_modules = true
 single_line_if_else_max_width = 0
+# single_line_let_else_max_width = 0
 struct_lit_width = 0
 struct_variant_width = 0
 tab_spaces = 2
+use_field_init_shorthand = true
 use_try_shorthand = true
 # version = "Two"
 # wrap_comments = true
