--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "croftsoft-commander-examples"
-version = "0.1.0"
-edition = "2021"
 authors = ["David Wallace Croft <david@CroftSoft.com>"]
+edition = "2021"
+name = "croftsoft-commander-examples"
+rust-version = "1.56.1"
+version = "0.1.1-SNAPSHOT"
 
 # See more keys and their definitions at
 #   https://doc.rust-lang.org/cargo/reference/manifest.html
