--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,6 +1,7 @@
 # https://rust-lang.github.io/rustfmt/
 array_width = 1
 # condense_wildcard_suffixes = true
+edition = "2021"
 fn_params_layout = "Vertical"
 # group_imports = "StdExternalCrate"
 hard_tabs = false
@@ -12,6 +13,8 @@ merge_derives = true
 newline_style = "Unix"
 # normalize_comments = true
 remove_nested_parens = true
+reorder_imports = true
+reorder_modules = true
 single_line_if_else_max_width = 0
 single_line_let_else_max_width = 0
 struct_lit_width = 0
