--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --workspace
+      run: cargo build --verbose --workspace
     - name: Run tests
-      run: cargo test --workspace
+      run: cargo test --verbose --package commander
