--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Build
       run: cargo build --verbose --workspace
     - name: Run tests
-      run: cargo test --verbose --package commander
+      run: cargo test --verbose --package croftsoft-commander
